edited subexperience 2 part 4

--- a/desc_experience1.tex
+++ b/desc_experience1.tex
@@ -46,8 +46,7 @@
 		\end{center}
 		
 		\item $Q_n$ is Hamiltonian for $n \geq 2$.\\
-		\textbf{Solution: }\\
-		Because graph $Q_n$ is bipartite, there is an edge from every x to an edge in y and there is an edge from every y to an edge in x.  Because, there are n edges in $Q_n$ (we're going without a proof) any graph $Q_n$ is strongly connected.  It is Hamiltonian because every vertex has an equal amount of edges.\\
+		\textbf{Solution: }Because graph $Q_n$ is bipartite, there is an edge from every x to an edge in y and there is an edge from every y to an edge in x.  Because, there are n edges in $Q_n$ (we're going without a proof) any graph $Q_n$ is strongly connected.  It is Hamiltonian because every vertex has an equal amount of edges.\\
 		\textbf{Edges Solution: }\\
 		We have already proved that all tournaments are Hamiltonian. A strongly connected graph where each vertex has the same amount of edges has the same properties as a tournament, just without directed edges.\\
 	\end{enumerate}
